--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,5 +1,3 @@
-import = ["/Users/distek/.config/alacritty/colors.toml"]
-live_config_reload = true
 
 [cursor]
 blink_interval = 600
@@ -9,30 +7,30 @@ blinking = "Always"
 shape = "Block"
 
 [env]
-TERM = "alacritty"
+TERM = "xterm-256color"
 
 [font]
 size = 14
 
 [font.bold]
-family = "FiraCode Nerd Font Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Bold"
 
 [font.bold_italic]
-family = "FiraCode Nerd Font Mono"
+family = "JetBrainsMono Nerd Font Mono"
 style = "Bold Italic"
+
+[font.italic]
+family = "JetBrainsMono Nerd Font Mono"
+style = "Italic"
+
+[font.normal]
+family = "JetBrainsMono Nerd Font Mono"
+
 
 [font.glyph_offset]
 x = 0
 y = 0
-
-[font.italic]
-family = "FiraCode Nerd Font Mono"
-style = "Italic"
-
-[font.normal]
-family = "FiraCode Nerd Font Mono"
-
 [font.offset]
 x = 0
 y = 0
@@ -56,8 +54,8 @@ multiplier = 1
 save_to_clipboard = true
 semantic_escape_chars = ",│`|:\"' ()[]{}<>"
 
-[shell]
-args = ["-l", "-c", "/opt/homebrew/bin/tmux"]
+[terminal.shell]
+args = ["-l", "-c", "tmux"]
 program = "/opt/homebrew/bin/zsh"
 
 [window]
@@ -70,8 +68,8 @@ option_as_alt = "Both"
 blur = true
 
 [window.dimensions]
-columns = 3
-lines = 3
+columns = 100
+lines = 40
 
 [window.padding]
 x = 0
@@ -79,10 +77,15 @@ y = 0
 
 [keyboard]
 bindings = [
-  { key = "C", mods = "Control|Shift", action = "Copy" },
-  { key = "V", mods = "Control|Shift", action = "Paste" },
   { key = "Equals", mods = "Control", action = "IncreaseFontSize" },
-  { key = "Plus", mods = "Control", action = "IncreaseFontSize" },
+  { key = "Plus", mods = "Control|Shift", action = "ResetFontSize" },
   { key = "Minus", mods = "Control", action = "DecreaseFontSize" },
   { key = "Minus", mods = "Control", action = "DecreaseFontSize" },
+  { key = "f", mods = "Command", action = "None" },
 ]
+
+[general]
+live_config_reload = true
+import = ["/Users/distek/.config/alacritty/colors.toml"]
+
+[terminal]
